# ape-dts

./: Cargo.toml  Dockerfile  Dockerfile.github.workflow  Dockerfile_manual  Makefile  README.md  README_ZH.md  log4rs.yaml
.github/workflows/: build_and_push_images.yml  build_and_release.yml  build_and_upload_to_s3.yml
docs/en/: config.md
docs/en/monitor/: position.md
docs/en/snapshot/: check.md  chunk_partitioner_rebalance.md  migration.md  tb_in_parallel.md
docs/en/structure/: check.md  (+1 more)
docs/templates/: mongo_to_mongo.md
docs/zh/: config.md
dt-cli/: Cargo.toml  README.md
dt-cli/scripts/: dts_demo.tape  install.sh  uninstall.sh
dt-cli/src/: config.rs  main.rs
dt-common/: Cargo.toml
dt-common/src/: error.rs  time_filter.rs
dt-connector/: Cargo.toml
dt-connector/src/: lib.rs  rdb_query_builder.rs  rdb_router.rs
dt-main/: Cargo.toml
dt-main/src/: main.rs
dt-parallelizer/src/: base_parallelizer.rs  chunk_partitioner.rs  lib.rs  merge_parallelizer.rs  mongo_merger.rs  partition_parallelizer.rs  rdb_merger.rs  rdb_partitioner.rs  snapshot_parallelizer.rs  table_parallelizer.rs
dt-pipeline/: Cargo.toml
dt-pipeline/src/: base_pipeline.rs  http_server_pipeline.rs  lib.rs  lua_processor.rs
dt-precheck/: Cargo.toml
dt-precheck/src/: lib.rs
dt-task/: Cargo.toml
dt-task/src/: extractor_util.rs  parallelizer_util.rs  sinker_util.rs  task_runner.rs  task_util.rs
dt-tests/: .env.ci  Cargo.toml  docker-compose.integration.yml
dt-tests/scripts/: run-integration-tests.sh
dt-tests/tests/: .env  integration_test.rs  test_config_util.rs
(+372 files in other folders)
